# unicv

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  index.md  vision-module.md
docs/models/: catalogue.md  cdm.md  depth-anything-3.md  depth-pro.md  sharp.md  simple-recon.md
docs/nn/: overview.md
src/unicv/: __init__.py
src/unicv/models/: __init__.py  _checkpoint.py  base.py
src/unicv/models/cdm/: __init__.py  model.py
src/unicv/models/depth_anything_3/: __init__.py  model.py
src/unicv/models/depth_pro/: __init__.py  encoder.py  model.py
src/unicv/models/sharp/: __init__.py  model.py
src/unicv/models/simple_recon/: __init__.py  model.py
src/unicv/nn/: __init__.py  cost_volume.py  decoder.py  dinov2.py  dpt.py  fov.py  gaussian.py  geometry.py  sdt.py  sparse3d.py
src/unicv/utils/: __init__.py  structs.py  types.py
tests/: test_base.py  test_cdm.py  test_cost_volume.py  test_decoder.py  test_depth_anything_3.py  test_depth_pro.py  test_dpt.py  test_fov.py  test_gaussian_head.py  test_geometry.py  test_pretrained.py  test_sdt.py  test_sharp.py  test_simple_recon.py  test_sparse3d.py  test_structs.py
