[project]
name = "unicv"
version = "1.0.0"
description = "Unified deep learning models for Computer Vision"
readme = "README.md"
authors = [{ name = "Prannaya Gupta", email = "prannayagupta@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "einops~=0.6.0",
    "huggingface-hub>=1.4.1",
    "timm>=1.0.25",
    "torch~=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
