[project]
name = "unicv"
version = "1.0.0"
description = "Unified deep learning models for Computer Vision"
readme = "README.md"
authors = [{ name = "Prannaya Gupta", email = "prannayagupta@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "torch~=2.0",
]

[project.optional-dependencies]
pretrained = [
    "huggingface-hub>=1.4.1",
    "timm>=1.0.25",
    "safetensors",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "huggingface-hub>=1.4.1",
    "timm>=1.0.25",
    "safetensors",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
